
- Go language backend
- new repository at http://github.com/fglock/Perlito
- new web page at http://www.perlito.org created by nferraz (Nelson Ferraz)

2.0  2009-10-09
- Javascript (Firefox, V8) bootstrap
- simplified 'make' inside tokens

1.0  2009-08-28
- Lisp (SBCL) bootstrap
- Changed accessors to lvalue

date?  -

- Perl5 emitter: fixed Array inside signature:  method ( $a, [ $b, $c ] ) ...
- Perl5 emitter: implemented "warn"

0.003  2006-12-12
- All tests converted to TAP format
- Parrot backend:
  - added Parrot emitter and 'mp6-parrot' script
  - passes several tests
  - 'Match' class written in MP6
- Perl5 backend:
  - parameter binding with complex data structures 

0.002  2006-11-18
- fixed array expansion in 'for @x {...}'
- fixed grammar compilation in MiniPerl6::Grammar and MiniPerl6::Grammar::Regex

- type annotations         my Int $x
- autoquote hash keys      { a => 42 }
- pair syntax sugar        { :$a }
- deep array binding       [ $a, [ $b, $c ] ] := [ 1, [ 2, 3 ] ]

0.001  2006-11-17
- MiniPerl6::Perl5::Emitter and MiniPerl6::Emitter::Token compile ok

  echo 'class Main { say "hello, World" }' | perl -Ilib5 mp6-perl5-boot.pl | perl -Ilib5 
 
2006-11-14
- all files parsed
- added Perl5 build script

2006-11-11
- parses MiniPerl6/Emitter.pm

2006-11-10
- parses mp6.pl

2006-11-06
- implemented MP6::G::Regex::rule()
- /<%hash>/
- /const|const/
- /<subrule>/
- /<'xyz'>/
- /\n/

2006-11-01
- initial language draft (on paper)